# cogent_voice-_assistant

./: .gitignore  app.log.2025-07-02  app.log.2025-07-03  app.log.2025-07-07  app.log.2025-07-09  app.md  app.py  budger_users.db  chat.html  chroma.sqlite3  index.md  load_documents.md  load_documents.py  login.html  main.py  mkdocs.yml  overview.md  pyproject.toml  script.js  script1.js  setup.md  setup_db.py  structure.md  style.css  style1.css
